<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RegistrationForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt2" />

            <TextView
                android:id="@+id/Line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Line" />

            <LinearLayout
                android:id="@+id/Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/biggap14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/ono"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/biggap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/ono1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/biggap2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/ono2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/biggap9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/ono3"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/biggap10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/ono4"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/biggap11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/ono5"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/biggap12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/biggap15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:ems="10"
                            android:hint="@string/uwu1"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:ems="10"
                            android:hint="@string/uwu2"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/biggap7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/Male"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:text="@string/man" />

                        <RadioButton
                            android:id="@+id/Female"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:text="@string/wo" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/biggap13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/editText8"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:digits="1234567890"
                        android:ems="10"
                        android:inputType="phone" />

                    <TextView
                        android:id="@+id/biggap8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/editText5"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/biggap4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/editText6"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:id="@+id/biggap5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/editText7"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:digits="1234567890"
                        android:ems="10"
                        android:inputType="phone" />

                    <TextView
                        android:id="@+id/biggap6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>